# SJTU_2019

./: README.txt  bingsearch.py  final-report-extra.odt  final-report.odt  history.txt  quadboi-1.16-linux.vbox  test
bingsearch/: cath.py  clearh.py
drone_ws/devel/: _catkin  _rosinstall  local_setup.sh
drone_ws/devel/lib/farquaad/: cstuff  dcam  droneCtrlBackend  droneCtrlFrontend  emergency  info  keyinfo  keys  oc  test003  test010  test011  test012a  test012b  test012c  updown  yahyeet
drone_ws/devel/lib/pkgconfig/: farquaad.pc  spinnyboi.pc
drone_ws/devel/share/farquaad/cmake/: farquaadConfig.cmake
drone_ws/devel/share/spinnyboi/cmake/: spinnyboiConfig.cmake
drone_ws/src/farquaad/: CMakeLists.txt
drone_ws/src/farquaad/src/: _test010.cpp.swp  a.out  cstuff.cpp  dcam.cpp  droneCtrlBackend.cpp  droneCtrlFrontend.cpp  emergency.cpp  info.cpp  keyinfo.cpp  obj.cpp  oc.cpp  test003.cpp  test010.cpp  test011.cpp  test012a.cpp  test012b.cpp  test012c.cpp  updown.cpp  updown.cppcopy  yahyeet.cpp  ye.cpp
opencvtest/: Makefile  a.out  colorDetector  colorDetector.cpp  hist  how-to-compile  lineTrack  lineTrack.cpp  objTrack.cppORB.cpp  openImage  openImage.cpp  shapedetnotes  tracker.cpp  tracker.cppwith_hist  vidCapt  vidCapt.cpp
report/: Final Report.odt
shared/: sources.list  test010.cpp  test011.cpp  ye.cpp
